--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ https://xkcd.com:443/806
       display: inline-block;
       width: 8px;
       background-color: #33ff33;
-      color: #ddd533; // this exists because vscode gives me a color picker and render swatch, used below for ahref //
       animation: blink 1s steps(2, start) infinite;
       vertical-align:text-top;
       height: 1em;
@@ -81,7 +80,7 @@ https://xkcd.com:443/806
       "",
       "SysOp (operator@localhost) has joined channel #.shibboleet",
       "","",
-      "SysOp: <a href='https://xkcd.com/806' style='color: #ddd533; text-decoration: none;'>you don't seem familiar... do I know you?</a>",
+      "SysOp: you don't seem familiar... <a href='https://xkcd.com/806' style='color: #ddd533; text-decoration: none;'>do I know you?</a>",
       "","","","","",
       "SysOp: please initiate contact using the details on the card",
       ""," ",
